# OpenMOL

./: .gitignore  README.md  amber_parm7.py  build.sh  lammps_full.py  lammps_qmag.py  openmol.py  pyproject.toml  tripos_mol2.py
OpenMol/: amber_parm7.py  charge_lib.py  lammps_full.py  lammps_qmag.py  mapping.py  pdb.py  psf.py  tripos_mol2.py
dsv2tleap/: README.txt  apply_index.py  build_index.py
examples/: amber2lammps.py  amber_prmtop.py  oleylamine.prmtop  oleylamine.rst7
openmol/: __init__.py  amber_parm7.py  array.py  charge_lib.py  core.py  lammps_full.py  lammps_qmag.py  mapping.py  mol2.py  openmol.py  pdb.py  psf.py  tripos_mol2.py  utils.py
