[project]
name = "openmol"

dynamic = [
    "version",
    "dependencies"
]

authors = [
    { name="Akhlak Mahmood", email="akhlakm@gatech.edu" },
]

description = "Convert between popular molecular dynamics data file formats."

readme = "README.md"

requires-python = ">=3.0"

keywords = ["research", "simulation", "development"]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/akhlakm/OpenMOL"
"Bug Tracker" = "https://github.com/akhlakm/OpenMOL/issues"

[project.scripts]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["openmol"]

[tool.setuptools.dynamic]
version = {attr = "openmol.__version__"}
dependencies = {file = ["requirements.txt"]}
